[package]
name = "audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.6.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
windows = { version = "0.51.1", features = ["Media_Audio", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Foundation_Collections", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_Foundation", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Variant", "Win32_UI_Input_KeyboardAndMouse"] }
