[package]
name = "mutelightv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cue-sdk = "0.0.3"
cue-sdk-sys = "0.0.5"
windows = { version = "0.52.0", features = ["Win32_System_Variant", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "implement", "Win32_Media_Audio_Endpoints", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_Com_StructuredStorage", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem"], default-features = false }
